# VietNam-graduation-exam-score-analysis

./: .gitignore  README.md  bao_cao_do_an (1).docx  code cào dữ điểm thi 2024.py  diem_chuan_cac_truong_dhqg.xlsx  diem_thi_THPTQG_2024.xlsx  diem_thi_thpt_2024.xlsx  edit_benchmark_scores.py  pyproject.toml  requirements.txt  save_process.py  ~$diem_chuan_cac_truong_dhqg.xlsx
Do_An_CK/: Crawling_admission_scores_v2.py  DH_AG_2023.py  DH_AG_2024.py  DH_BK_2023.py  DH_BK_TPHCM_2024.py  DH_CNTT_2023.py  DH_CNTT_2024.py  DH_KHSK_2023.py  DH_KHSK_2024.py  DH_KHTN_2023.py  DH_KHTN_2024.py  DH_KHXHNV_2024.py  DH_KTL_2023.py  DH_KTL_2024.py  DH_QT_2023.py  DH_QT_2024.py  Diem_Chuan_8_Truong_DHQG.xlsx  Diem_Chuan_THPT_cleaned.csv  Srcaping_Diem_Chuan_2024_23_22.py  clean_data.py
Do_An_CK/Chức_Năng/: Crawling_admission_scores_v2.py  Diem_Chuan_8_Truong_DHQG.xlsx  Diem_Chuan_Cleand.csv
Selenium/: BaiTap03.py
notebooks/: eda.ipynb
query/: query.py
src/: generator.py  logger.py  main.py  utils.py
src/config/: settings.py
src/core/: driver.py  enums.py  sbd.py
src/db/: connection.py  repository.py  schema.py
src/orchestrator/: system.py
src/services/: fetcher.py  monitor.py  saver.py
src_2/: main.py  orchestrator.py
src_2/helper/: color_map.py  proxy.py
src_2/network/: fetcher.py
src_2/tasks/: parser.py  sbd_worker.py
